# pmtiles-utils

./: .gitignore  input.gpkg  pyproject.toml  readme.md  tiles_config.yaml
convert/: __main__.py  cli.py  convert.py  geo_file_utils.py  requirements.txt  utils.py
src/convert/: __main__.py  cli.py  geo_file_utils.py  requirements.txt  utils.py
viewer/: index.html  package-lock.json  package.json  vite.config.ts
viewer/src/: App.tsx  ColorRange.tsx  config.ts  utils.ts
